--- a/systems_time_domain/convolution.ipynb
+++ b/systems_time_domain/convolution.ipynb
@@ -22,8 +22,8 @@
     "The convolution of two signals $x(t)$ and $h(t)$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
-    "(x * h)(t) = x(t) * h(t) = \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot h(t - \\tau) \\; d\\tau = \n",
-    "\\int_{-\\infty}^{\\infty} x(t - \\tau) \\cdot h(\\tau) \\; d\\tau\n",
+    "(x * h)(t) = x(t) * h(t) = \\int_{\\tau = -\\infty}^{\\tau=\\infty} x(\\tau) \\cdot h(t - \\tau) \\; d\\tau = \n",
+    "\\int_{\\tau=-\\infty}^{\\tau=\\infty} x(t - \\tau) \\cdot h(\\tau) \\; d\\tau\n",
     "\\end{equation}\n",
     "\n",
     "where $*$ is a common short-hand notation of the convolution."
@@ -79,7 +79,7 @@
     "The convolution is commonly [interpreted in a graphical manner](https://en.wikipedia.org/wiki/Convolution#Visual_explanation). This interpretation provides valuable insights into its calculation and allows to derive a first estimate of the result. The calculation of the convolution integral\n",
     "\n",
     "\\begin{equation}\n",
-    "y(t) = \\int_{-\\infty}^{\\infty} x(\\tau) \\cdot h(t-\\tau) \\; d\\tau\n",
+    "y(t) = \\int_{\\tau = -\\infty}^{\\tau = \\infty} x(\\tau) \\cdot h(t-\\tau) \\; d\\tau\n",
     "\\end{equation}\n",
     "\n",
     "\n",
@@ -89,11 +89,11 @@
     "\n",
     "2. time-reverse $h(\\tau)$ (mirroring at vertical axis),\n",
     "\n",
-    "3. shift $h(-\\tau)$ by $t$ to the right to yield $h(t - \\tau)$,\n",
+    "3. shift $h(-\\tau)$ by $t$ to yield $h(t - \\tau)$, i.e. a shift to **right** for $t>0$ or a shift to **left** for $t<0$,\n",
     "\n",
-    "4. shift $h(t - \\tau)$ throughout $t = -\\infty \\dots \\infty$, check if it overlaps with $x(\\tau)$.\n",
+    "4. check for which $t = -\\infty \\dots \\infty$ the mirrored & shifted $h(t - \\tau)$ overlaps with $x(\\tau)$, calculate the specific integral (i.e. the area of the overlap) for all these relevant $t$ to yield $y(t)$\n",
     "\n",
-    "Steps 3 and 4 are evaluated for each time-instant $t$ in order to calculate the convolution integral for the overlapping sections. The graphical interpretation of the convolution is illustrated in the remainder at an example."
+    "The graphical interpretation of the convolution is illustrated by means of the following example."
    ]
   },
   {
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **first step** is to substitute $t$ by $\\tau$ to yield $h(\\tau)$ and $x(\\tau)$. Note, the horizontal axis of the plot represents now $\\tau$"
+    "The **first step** is to substitute $t$ by $\\tau$ to yield $h(\\tau)$ and $x(\\tau)$. Note, the horizontal axis of the plot represents now $\\tau$, which is our temporal helper variable for the integration"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the **third setp** the impulse response $h(-\\tau)$ is shifted by $t$ (to the **right** for $t>0$, to the **left** for $t<0$) to yield $h(t - \\tau)$."
+    "In the **third step** the impulse response $h(-\\tau)$ is shifted by $t$ to yield $h(t - \\tau)$. The temporal shift is performed to the **right** for $t>0$ and to the **left** for $t<0$."
    ]
   },
   {
@@ -232,7 +232,7 @@
     "\n",
     "1. no overlap for $t<0$,\n",
     "2. partial overlap for $0 \\leq t < 1$, and\n",
-    "3. full overlap for $t > 0$."
+    "3. full overlap for $t > 0$ (note that the chosen impulse response decays asymptotically)."
    ]
   },
   {
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Form this it becomes clear that the result for the first case is given as\n",
+    "From this it becomes clear that the convolution result for the first case is given as\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = 0 \\qquad \\text{for } t < 0\n",
@@ -280,7 +280,7 @@
     "Hence, for the second case the convolution integral degenerates to\n",
     "\n",
     "\\begin{equation}\n",
-    "y(t) = \\int_{0}^{t} e^{-(t - \\tau)} d\\tau = 1 - e^{-t} \\qquad \\text{for } 0 < t < 1\n",
+    "y(t) = \\int_{0}^{t} e^{-(t - \\tau)} d\\tau = 1 - e^{-t} \\qquad \\text{for } 0 \\leq t < 1\n",
     "\\end{equation}\n",
     "\n",
     "The third case, full overlap, is illustrated for $t = 3$"
@@ -302,7 +302,7 @@
     "For the third case the convolution integral degenerates to\n",
     "\n",
     "\\begin{equation}\n",
-    "y(t) = \\int_{0}^{1} e^{-(t - \\tau)} d\\tau = (e - 1) e^{-t} \\qquad \\text{for } t > 1\n",
+    "y(t) = \\int_{0}^{1} e^{-(t - \\tau)} d\\tau = (e - 1) e^{-t} \\qquad \\text{for } t \\geq 1\n",
     "\\end{equation}"
    ]
   },
@@ -351,9 +351,9 @@
    "source": [
     "### Alternative Graphical Interpretation\n",
     "\n",
-    "The **order** of mirroring and time shifting of $h(\\tau)$ can be **exchanged**. The procedure is then performed as follows:\n",
+    "The **sequence** of mirroring and time shifting of $h(\\tau)$ can be **exchanged**. The procedure is then performed as follows:\n",
     "\n",
-    "1. Substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$, yielding $x(\\tau)$ and $h(\\tau)$ over $\\tau$\n",
+    "1. Substitute $t$ by $\\tau$ in both $x(t)$ and $h(t)$, yielding $x(\\tau)$ and $h(\\tau)$ over helper variable $\\tau$ (don't confuse $\\tau$ with a time constant, e.g. from a RC-circuit)\n",
     "\n",
     "2. Shift $h(\\tau)$ by $t$ to yield $h(\\tau-t)$, **delayed** for $t>0$, **leading** for $t<0$\n",
     "\n",
@@ -363,7 +363,7 @@
     "\n",
     "Perform 1st to 4th step for all $t$ - at least for all $t$ where overlapping occurs in the 4th step - to obtain the result.\n",
     "\n",
-    "The graphical interpretation of these operations is illustrated in the remainder by the same example as above. The impulse response $h(t)$ is illustrated by the red graph and the input signal $x(t)$ by the blue graph."
+    "The graphical interpretation of these operations is illustrated by the same functions as above. The impulse response $h(t)$ is illustrated by the orange graph and the input signal $x(t)$ by the blue graph."
    ]
   },
   {
@@ -373,7 +373,7 @@
    "outputs": [],
    "source": [
     "h = sym.exp(-t) * sym.Heaviside(t)\n",
-    "x = rect(t-1/2)\n",
+    "x = sym.Rational(3, 4) * rect(t - 1/2)\n",
     "\n",
     "plot_signals(t, x, h, r'$h(t)$, $x(t)$', r'$t$')"
    ]
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **second step** is to shift $h(\\tau)$ to yield $h(\\tau-t)$, for the example $t=-2$ is chosen, thus $h(\\tau-t)$ is now **leading** compared to $h(\\tau)$."
+    "The **second step** is to shift $h(\\tau)$ to yield $h(\\tau-t)$. In the example $t=-2$ is chosen, thus $h(\\tau-t)$ is now **leading** compared to $h(\\tau)$."
    ]
   },
   {
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h2 = h1.subs(tau, tau-t)\n",
+    "h2 = h.subs(t, tau-t)\n",
     "\n",
     "plot_signals(tau, x1, h2.subs(t,-2), r'$h(\\tau-t)$, $x(\\tau)$', r'$\\tau$')"
    ]
@@ -428,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h3 = h1.subs(tau, -(tau-t))\n",
+    "h3 = h.subs(t, -(tau-t))\n",
     "\n",
     "plot_signals(tau, x1, h3.subs(t,-2), r'$h(t-\\tau)$, $x(\\tau)$', r'$\\tau$')"
    ]
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the **fourth step** the convolution integral is evaluated. In the example for $t=1$ the largest overlap area yields the convolution result $y(t=1) = 1-\\mathrm{e}^{-1} \\approx 0.63$, which is the maximum of $y(t)$."
+    "In the **fourth step** the convolution integral is evaluated. In the example for $t=1$ the largest overlap area yields the convolution result $y(t=1) = \\frac{3}{4}(1-\\mathrm{e}^{-1}) \\approx \\frac{3}{4} \\cdot 0.63 \\approx 0.47$ , which is the maximum of $y(t)$."
    ]
   },
   {
@@ -453,8 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Repeat steps one to four for all $t$ to obtain $y(t)$. $y(t)$ is zero for all $t$ where no overlap occurs.\n",
-    "You might realize that only the 4th step must be repeatedly evaluated inserting a specific $t$."
+    "Repeat steps one to four for all $t$ to obtain $y(t)$. Note that $y(t)$ is zero for all $t$ where no overlap of $x(\\tau)$ and $h(t-\\tau)$ occurs (integral = area is zero)."
    ]
   },
   {
@@ -485,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
