Added novel example for the calculation of an inverse Laplace transform

--- a/laplace_transform/inverse.ipynb
+++ b/laplace_transform/inverse.ipynb
@@ -103,6 +103,196 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Example - Inverse transform of a rational Laplace transform\n",
+    "\n",
+    "The inverse transform $x(t) = \\mathcal{L}^{-1} \\{ X(s) \\}$ of \n",
+    "\n",
+    "\\begin{equation}\n",
+    "X(s) = \\frac{1}{(s+1) (s+2)^2} \\qquad \\text{for } \\Re \\{s \\} > -1\n",
+    "\\end{equation}\n",
+    "\n",
+    "is computed using the procedure outline above. First the function $X(s)$ is defined in `SymPy`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sym\n",
+    "%matplotlib inline\n",
+    "sym.init_printing()\n",
+    "\n",
+    "s = sym.symbols('s', complex=True)\n",
+    "t = sym.symbols('t', real=True)\n",
+    "\n",
+    "X = 1/((s+1)*(s+2)**2)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since $X(s)$ has two real-values poles, $x_{\\infty 1} = -1$ with degree $R_1 = 1$ and $x_{\\infty 2} = -2$ with degree $R_2 = 2$, the following partial fraction decomposition is chosen as ansatz in accordance with above given formula"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A0, A11, A21, A22 = sym.symbols('A_0 A_{11} A_{21} A_{22}', real=True)\n",
+    "Xp = A0 + A11/(s+1) + A21/(s+2) + A22/(s+2)**2\n",
+    "Xp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The four real-valued constants $A_0$, $A_{11}$, $A_{21}$ and $A_{22}$ of the partial fraction decomposition will be determined later. First a look is taken at the inverse Laplace transforms of the individual summands composed from the constant and the individual poles. For the constant we get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x0 = sym.inverse_laplace_transform(Xp.args[0], s, t)\n",
+    "x0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the first pole $s_{\\infty 1}$ with degree zero we get"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x1 = sym.inverse_laplace_transform(Xp.args[1], s, t)\n",
+    "x1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the second pole $s_{\\infty 2}$ with degree two we get two contributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x2 = sym.inverse_laplace_transform(Xp.args[2], s, t)\n",
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x3 = sym.inverse_laplace_transform(Xp.args[3], s, t)\n",
+    "x3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The inverse Laplace transform of $X(s)$ is now composed from the superposition of the four individual parts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = x0 + x1 + x2 + x3\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the final solution the four coefficients are determined using the given limit formulas for the coefficients of a partial fraction decomposition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coeffs = {A0 : sym.limit(X, s, sym.oo)}\n",
+    "coeffs.update({A11 : sym.limit(X*(s+1), s, -1)})\n",
+    "coeffs.update({A21 : sym.limit(sym.diff(X*(s+2)**2, s), s, -2)})\n",
+    "coeffs.update({A22 : sym.limit(X*(s+2)**2, s, -2)})\n",
+    "coeffs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Substitution into the inverse Laplace transform yields the final solution $x(t) = \\mathcal{L}^{-1}\\{ X(s) \\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = x.subs(coeffs)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solution is plotted for illustration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sym.plot(x, (t, -1, 10), ylabel=r'$x(t)$')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise**\n",
+    "\n",
+    "* Derive the inverse Laplace transform of $X(s)$ by manual calculation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Classification of Poles\n",
     "\n",
     "Above procedure allows to compute the inverse Laplace transform $x(t) = \\mathcal{L}^{-1} \\{ X(s) \\}$ of a rational Laplace transform $X(s)$ in a systematic way. It is well suited for an algorithmic realization. However, for manual calculus it may be more efficient to classify the poles with respect to their location in the $s$-plane and their symmetries. The classification can then be used to formulate a modified partial fraction decomposition which limits the need for later algebraic simplification of the inverse Laplace transform. Three classes of poles are typically considered\n",
@@ -120,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Example - Inverse transform of a rational Laplace transform\n",
+    "#### Example - Inverse transform of a rational Laplace transform with symmetric poles\n",
     "\n",
     "The inverse transform $x(t) = \\mathcal{L}^{-1} \\{ X(s) \\}$ of \n",
     "\n",
@@ -137,13 +327,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import sympy as sym\n",
-    "sym.init_printing()\n",
-    "\n",
-    "s = sym.symbols('s', complex=True)\n",
-    "t = sym.symbols('t', real=True)\n",
-    "\n",
     "X = (2*s**2 + 14*s + 124)/(s**3 + 8 * s**2 + 46*s + 68)\n",
     "X"
    ]
@@ -297,12 +480,7 @@
    "source": [
     "**Exercise**\n",
     "\n",
-    "* Derive the inverse Laplace transform of $X(s)$ by manual calculation.\n",
-    "* Derive the inverse Laplace transform of\n",
-    "    \\begin{equation}\n",
-    "    X(s) = \\frac{1}{(s+1)(s+2)^2} \\qquad \\text{for } \\Re \\{ s \\} \\geq -1\n",
-    "    \\end{equation}\n",
-    "    by manual calculation. Check your results with `SymPy`."
+    "* Derive the inverse Laplace transform of $X(s)$ by manual calculation."
    ]
   },
   {
