Fixed examples to work with current sympy, introduced common plotting style

--- a/fourier_transform/properties.ipynb
+++ b/fourier_transform/properties.ipynb
@@ -261,20 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class rect(sym.Function):\n",
-    "\n",
-    "    @classmethod\n",
-    "    def eval(cls, arg):\n",
-    "        return sym.Heaviside(arg + sym.S.Half) - sym.Heaviside(arg - sym.S.Half)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = sym.sign(t)*rect(t)\n",
+    "x = - sym.Heaviside(t + 1/2) + 2 * sym.Heaviside(t) - sym.Heaviside(t - 1/2)\n",
     "sym.plot(x, (t, -2, 2), xlabel=r'$t$', ylabel=r'$x(t)$');"
    ]
   },
@@ -335,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
