--- a/fourier_transform/theorems.ipynb
+++ b/fourier_transform/theorems.ipynb
@@ -68,27 +68,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
+    "\n",
     "\n",
     "def fourier_transform(x):\n",
     "    return sym.transforms._fourier_transform(x, t, w, 1, -1, 'Fourier')\n",
     "\n",
     "\n",
-    "class rect(sym.Function):\n",
-    "\n",
-    "    @classmethod\n",
-    "    def eval(cls, arg):\n",
-    "        return sym.Heaviside(arg + sym.S.Half) - sym.Heaviside(arg - sym.S.Half)\n",
-    "\n",
-    "\n",
-    "t, w = sym.symbols('t omega', real=True)\n",
+    "t, w = sym.symbols('t omega')\n",
     "a = sym.symbols('a', positive=True)\n",
     "\n",
-    "x = rect(a*t)\n",
+    "x = sym.Heaviside(t + sym.S.Half/a) - sym.Heaviside(t - sym.S.Half/a)\n",
     "X = fourier_transform(x)\n",
-    "X = X.rewrite(sym.sin).simplify()\n",
     "X"
    ]
   },
@@ -279,18 +272,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ \\text{sgn}(t) \\} = \\frac{2}{j \\omega}\n",
-    "\\end{equation}\n",
-    "\n",
-    "The same result can be achieved by computing the transform in `SymPy`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fourier_transform(sym.sign(t))"
+    "\\end{equation}"
    ]
   },
   {
@@ -446,6 +428,13 @@
    "source": [
     "w0, a = sym.symbols('omega0 a')\n",
     "\n",
+    "class rect(sym.Function):\n",
+    "\n",
+    "    @classmethod\n",
+    "    def eval(cls, arg):\n",
+    "        return sym.Heaviside(arg + sym.S.Half) - sym.Heaviside(arg - sym.S.Half)\n",
+    "\n",
+    "    \n",
     "y = rect(a*t) * sym.cos(w0*t)\n",
     "W = 1/abs(a) * sym.sinc(w/(2*a))\n",
     "X = sym.pi*(sym.DiracDelta(w + w0) + sym.DiracDelta(w - w0))\n",
@@ -665,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
