Fixed error in example of non-linear system

--- a/systems_time_domain/eigenfunctions.ipynb
+++ b/systems_time_domain/eigenfunctions.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "ode = sym.Eq(y.diff(t)**2, x)\n",
     "solution = sym.dsolve(ode)\n",
-    "solution.subs('C1', 0)"
+    "[si.subs('C1', 0) for si in solution]"
    ]
   },
   {
