--- a/fourier_transform/definition.ipynb
+++ b/fourier_transform/definition.ipynb
@@ -23,21 +23,21 @@
     "X(j \\omega) = \\int_{-\\infty}^{\\infty} x(t) \\, e^{-j \\omega t} \\; dt\n",
     "\\end{equation}\n",
     "\n",
-    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ denotes the Fourier transform of $x(t)$. It is also termed as *spectrum* of the signal $x(t)$. The argument $j \\omega$ copes for the fact that the kernel $e^{-j \\omega t}$ of above [integral transform](https://en.wikipedia.org/wiki/Integral_transform) is a [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{-s t}$ with $s= j \\omega$. Other common definitions of the Fourier transform may be found in the literature. They differ with respect to the sign of the exponential function and normalization factors. Or the Fourier transform is evaluated in terms of the frequency $f$ instead of the angular frequency $\\omega = 2 \\pi f$. In both cases, the properties, theorems and transforms may differ from the ones given here.\n",
-    "\n",
-    "A sufficient but not necessary condition for the existence of the Fourier transform of a given signal $x(t)$ is\n",
-    "\n",
-    "\\begin{equation}\n",
-    "\\int_{-\\infty}^{\\infty} | x(t) | \\; dt < \\infty\n",
-    "\\end{equation}\n",
-    "\n",
-    "i.e., the signal $x(t)$ is an [absolutely integrable function](https://en.wikipedia.org/wiki/Absolutely_integrable_function).\n",
+    "where $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ denotes the Fourier transform of $x(t)$. It is also termed as *spectrum* of the signal $x(t)$. The argument $j \\omega$ copes for the fact that the kernel $e^{-j \\omega t}$ of above [integral transform](https://en.wikipedia.org/wiki/Integral_transform) is a [harmonic exponential signal](../continuous_signals/standard_signals.ipynb#Complex-Exponential-Signal) $e^{-s t}$ with $s= j \\omega$. Other common definitions of the Fourier transform may be found in the literature. They differ with respect to the sign of the exponential function and normalization factors. Sometimes the Fourier transform is evaluated in terms of the frequency $f$ instead of the angular frequency $\\omega = 2 \\pi f$. In both cases, the properties, theorems and transforms may differ from the ones derived in the following.\n",
     "\n",
     "The inverse Fourier transform $x(t) = \\mathcal{F}^{-1} \\{ X(j \\omega) \\}$ is defined as\n",
     "\n",
     "\\begin{equation}\n",
     "x(t) = \\frac{1}{2 \\pi} \\int_{-\\infty}^{\\infty} X(j \\omega) \\, e^{j \\omega t} \\; d\\omega\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "A sufficient but not necessary condition for the existence of the Fourier transform may be derived from the absolute integrability of above Fourier integral\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\int_{-\\infty}^{\\infty} | x(t) \\, e^{-j \\omega t}| \\; dt \\leq \\int_{-\\infty}^{\\infty} | x(t) | \\; dt < \\infty\n",
+    "\\end{equation}\n",
+    "\n",
+    "where the triangle inequality and $|e^{-j \\omega t}|=1$ have been used to find an upper limit of the first integral. Hence, the signal $x(t)$ has to be an [absolutely integrable function](https://en.wikipedia.org/wiki/Absolutely_integrable_function)."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "source": [
     "### Relation to the Laplace Transform\n",
     "\n",
-    "The Laplace transform $X(s) = \\mathcal{L} \\{ x(t) \\}$ of a signal $x(t)$ can be related to its Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ by inspecting the kernels of both transforms. The [Laplace transform](../laplace_transform/definition.ipynb) has the complex exponential function $e^{- s t}$ with $s \\in \\mathbb{C}$ as kernel. The Fourier transform, as introduced above, has the harmonic exponential function $e^{- j \\omega t}$ with $\\omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $s = \\sigma + j \\omega$. Hence, if the ROC includes the imaginary axis $s = j \\omega$ of the $s$-plane, the Fourier transform of a signal $x(t)$ can be derived from its Laplace transform by\n",
+    "The [Laplace transform](../laplace_transform/definition.ipynb) $X(s) = \\mathcal{L} \\{ x(t) \\}$ of a signal $x(t)$ can be related to its Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ by inspecting the kernels of both transforms. The Laplace transform has the complex exponential function $e^{- s t}$ with $s \\in \\mathbb{C}$ as kernel. The Fourier transform, as introduced above, has the harmonic exponential function $e^{- j \\omega t}$ with $\\omega \\in \\mathbb{R}$ as kernel. Both can be related to each other by considering that $s = \\sigma + j \\omega$. Hence, if the ROC includes the imaginary axis $s = j \\omega$ of the $s$-plane, the Fourier transform of a signal $x(t)$ can be derived from its Laplace transform by\n",
     "\n",
     "\\begin{equation}\n",
     "\\mathcal{F} \\{ x(t) \\} = \\mathcal{L} \\{ x(t) \\} \\bigr\\rvert_{s = j \\omega}\n",
@@ -54,14 +54,14 @@
     "\n",
     "If the ROC does not include the imaginary axis, the Fourier transform cannot be derived from the Laplace transform of $x(t)$. If the ROC includes the imaginary axis $s = j \\omega$ and the integration path of the inverse Laplace transform is chosen along the imaginary axis $\\sigma = 0$, the inverse Laplace transform becomes identical to the inverse Fourier transform.\n",
     "\n",
-    "A benefit of the Laplace over the Fourier transform is that it exists for a different class of signals. The one-sided Laplace transform also allows to conveniently consider initial values of differential equations."
+    "A benefit of the Laplace over the Fourier transform is that it exists for a wider class of signals. The one-sided Laplace transform also allows to conveniently consider initial values of differential equations."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Example**\n",
+    "**Example - Fourier transform of causal exponential signal**\n",
     "\n",
     "The Fourier transform $X(j \\omega) = \\mathcal{F} \\{ x(t) \\}$ of the causal exponential signal\n",
     "\n",
@@ -133,8 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
     "import sympy as sym\n",
+    "%matplotlib inline\n",
     "sym.init_printing()\n",
     "\n",
     "t, w = sym.symbols('t omega', real=True)\n",
